# recipe-remix

./: .replit  DEPLOYMENT-FIXES-SUMMARY.md  DEPLOYMENT.md  build.sh  deployment-config.toml  npm  npm-build  npm-start  package-lock.json  package-scripts.js  package.json  pyproject.toml  replit.md  run-build  run-deploy  run-start  run_server.py  start.sh  start_server.sh  tailwind.config.ts  test_signup.py  tsconfig.json
attached_assets/: Pasted-Page-not-found-404-Request-Method-GET-Request-URL-http-7ed4b1f2-a184-4e34-82bb-2f6cba40180a-00-1755788169729_1755788169731.txt
client/src/: index.css
client/src/components/: add-recipe-modal.tsx  app-header.tsx  clone-recipe-modal.tsx  recipe-card.tsx  recipe-details-modal.tsx  (+1 more)
recipe_manager/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: adaptive_cleaner.py  admin.py  ai_assistant.py  meal_planning_service.py  models.py  recipe_cleaner.py  services.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_category_recipe_difficulty_recipe_is_favorite_and_more.py  0003_reciperevision.py  0004_chatmessage.py  0005_shoppinglist_shoppinglistitem_mealplan.py  0006_cleaningrule_recipecleaningfeedback.py  0007_shoppinglistitem_recipe_sources.py  0008_mealplan_created_by_recipe_created_by_and_more.py
scripts/: build.js  start.js
server/: index.ts  routes.ts  scraper.ts  storage.ts
server/services/: recipeScrapingService.ts
shared/: schema.ts
static/js/: app.js  chat-assistant.js  meal-calendar-page.js  meal-calendar.js
staticfiles/js/: app.js  meal-calendar-page.js  meal-calendar.js
(+13 files in other folders)
